# Gesture-Music-Paint

./: .gitignore  LICENSE  README.md  canvas_manager.py  config.py  gallery_manager.py  hand_detector.py  music_engine.py  project_model.py  pyproject.toml  requirements.txt  sequencer.py  settings_manager.py  start_gui.bat  start_web.bat  web_server.py
docs/: report.md
examples/: demo_melody.json
static/css/: style.css
static/js/: app.js
templates/: gallery.html  index.html  landing.html
tests/: test_config.py  test_project_model.py  test_settings_manager.py
